# notisbakpg

./: .gitignore  .justfile  Cargo.toml  Dockerfile  README.md  docker-compose.yml  sample.env  sample.http  sqlx-data.json  test.http
migrations/: 20220531173556_table_notes.down.sql  20220531173556_table_notes.up.sql  20220531174522_table_categories.down.sql  20220531174522_table_categories.up.sql  20220531174735_table_labels.down.sql  20220531174735_table_labels.up.sql  20220531174913_table_notes_labels.down.sql  20220531174913_table_notes_labels.up.sql  20220602191522_table_notes_categories.down.sql  20220602191522_table_notes_categories.up.sql  20220618190020_table_users.up.sql  20221013053034_table_users_labels.down.sql  20221013053034_table_users_labels.up.sql
src/: category.rs  label.rs  label_api.rs  main.rs  note.rs  note_category.rs  note_label.rs  routes.rs  user.rs  user_label.rs  utils.rs
src/model/: category.rs  claims.rs  label.rs  mod.rs  note.rs  note_label.rs  user.rs  user_label.rs
src/routes/: categories.rs  labels.rs  mod.rs  notes.rs  users.rs
