[package]
name = "notisbak"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Lorenzo Carbonell <lorenzo.carbonell.cerezo@gmail.com>"]
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = ["runtime-actix-rustls", "postgres", "macros", "offline", "chrono"]}
actix-web = "4"
actix-web-httpauth = "0.6"
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "2.2", features = ["actix_extras"]}
utoipa-swagger-ui = { version = "2.0", features = ["actix-web"]}
env_logger = "0.9"
bytes = "1.2"
